<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.userlist.UserListFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_list_search"
        android:paddingHorizontal="@dimen/user_list_horizontal_space"
        android:paddingVertical="@dimen/user_list_search_padding_vertical"
        app:boxCornerRadiusBottomEnd="@dimen/user_list_search_radius"
        app:boxCornerRadiusBottomStart="@dimen/user_list_search_radius"
        app:boxCornerRadiusTopEnd="@dimen/user_list_search_radius"
        app:boxCornerRadiusTopStart="@dimen/user_list_search_radius"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="textFilter"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input"
        tools:listitem="@layout/item_user_list" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_search_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_search_empty,text_search_empty_title,text_search_empty_message" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_search_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/user_list_horizontal_space"
        android:layout_marginTop="@dimen/user_list_search_empty_image_martin_top"
        android:scaleType="centerCrop"
        android:src="@drawable/image_search_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/recycler_view"
        app:shapeAppearanceOverlay="@style/SearchEmptyImageShape" />

    <TextView
        android:id="@+id/text_search_empty_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/user_list_horizontal_space"
        android:layout_marginTop="@dimen/user_list_search_empty_title_martin_top"
        android:text="@string/label_search_empty_title"
        android:textAlignment="center"
        android:textSize="@dimen/user_list_search_empty_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_search_empty" />

    <TextView
        android:id="@+id/text_search_empty_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/user_list_horizontal_space"
        android:layout_marginTop="@dimen/user_list_search_empty_message_margin_top"
        android:lineSpacingExtra="@dimen/user_list_search_empty_message_line_spacing"
        android:text="@string/label_search_empty_message"
        android:textAlignment="center"
        android:textSize="@dimen/user_list_search_empty_message_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_search_empty_title" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/recycler_view"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>