<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:id="@+id/collapsed_profile_header"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/profile_horizontal_space"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/image_avatar_collapsed"
                        android:layout_width="@dimen/profile_avatar_collapsed_size"
                        android:layout_height="@dimen/profile_avatar_collapsed_size"
                        android:layout_marginEnd="@dimen/profile_avatar_collapsed_margin_end"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CircularImageView"
                        tools:src="@drawable/avatar_placeholder_2" />

                    <TextView
                        android:id="@+id/text_name_collapsed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/profile_name_text_size_collapsed"
                        android:textStyle="bold"
                        tools:text="Hsu,Hsiao-Hsuan" />
                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="@dimen/profile_avatar_size"
                    android:layout_height="@dimen/profile_avatar_size"
                    android:layout_marginTop="@dimen/profile_avatar_margin_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CircularImageView"
                    tools:src="@drawable/avatar_placeholder_2" />

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/profile_horizontal_space"
                    android:layout_marginTop="@dimen/profile_name_margin_top"
                    android:text="@string/label_placeholder"
                    android:textAlignment="center"
                    android:textSize="@dimen/profile_name_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_avatar"
                    tools:text="Hsu,Hsiao-Hsuan" />

                <TextView
                    android:id="@+id/text_login_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/profile_horizontal_space"
                    android:text="@string/label_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/lynch"
                    android:textSize="@dimen/profile_login_name_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_name"
                    tools:text="\@hsuhsiaohsuan" />

                <LinearLayout
                    android:id="@+id/layout_user_followers"
                    style="@style/RepoUserFollowBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_horizontal_space"
                    android:layout_marginTop="@dimen/profile_follow_margin_top"
                    android:layout_marginEnd="@dimen/profile_follow_between_margin"
                    app:layout_constraintEnd_toStartOf="@+id/layout_user_following"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_login_name">

                    <TextView
                        android:id="@+id/text_followers_count"
                        style="@style/RepoUserFollowCount"
                        tools:text="354" />

                    <TextView
                        style="@style/RepoUserFollowLabel"
                        android:text="@string/label_followers" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_user_following"
                    style="@style/RepoUserFollowBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_follow_between_margin"
                    android:layout_marginTop="@dimen/profile_follow_margin_top"
                    android:layout_marginEnd="@dimen/profile_horizontal_space"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layout_user_followers"
                    app:layout_constraintTop_toBottomOf="@id/text_login_name">

                    <TextView
                        android:id="@+id/text_following_count"
                        style="@style/RepoUserFollowCount"
                        tools:text="789" />

                    <TextView
                        style="@style/RepoUserFollowLabel"
                        android:text="@string/label_following" />

                </LinearLayout>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="layout_user_followers,layout_user_following" />

                <TextView
                    android:id="@+id/text_repository_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/profile_horizontal_space"
                    android:layout_marginTop="@dimen/profile_repo_margin_top"
                    android:paddingBottom="@dimen/profile_repo_list_margin_top"
                    android:text="@string/label_repository"
                    android:textSize="@dimen/profile_repo_text_size"
                    android:textStyle="bold"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrier_repositories" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_repositories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_repository_list" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
